kubernetes/base/streamtv-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamtv-frontend
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: streamtv-frontend
  sessionAffinity: None
