kubernetes/base/streamtv-frontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: streamtv-frontend
